[gd_scene load_steps=7 format=3 uid="uid://c3qol24ks2ua1"]

[ext_resource type="Script" path="res://slicer.gd" id="1_0jrbb"]
[ext_resource type="Texture2D" uid="uid://dl5jy4llel76" path="res://assets/cut_marker.png" id="2_506ps"]
[ext_resource type="Texture2D" uid="uid://dft7njf55p5ic" path="res://assets/knife_with_sheen.png" id="3_6byb5"]
[ext_resource type="AudioStream" uid="uid://ewg2pv8qmopl" path="res://assets/zapsplat_warfare_sword_swipe_slash_body_squelch_20830.mp3" id="4_5ydyj"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_mgr1v"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rqc7r"]
size = Vector2(14, 32)

[node name="Slicer" type="Node2D"]
script = ExtResource("1_0jrbb")

[node name="CutMarker" type="Sprite2D" parent="."]
visible = false
z_index = 2
texture_filter = 1
texture = ExtResource("2_506ps")

[node name="KnifeSprite" type="Sprite2D" parent="."]
visible = false
z_index = 2
texture_filter = 1
position = Vector2(16, 14)
rotation = 1.5708
texture = ExtResource("3_6byb5")

[node name="ShapeCast2D" type="ShapeCast2D" parent="."]
visible = false
shape = SubResource("SegmentShape2D_mgr1v")
target_position = Vector2(0, 1000)
margin = 1.0
collision_mask = 4
collide_with_areas = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_rqc7r")

[node name="SlicerAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_5ydyj")
bus = &"SliceEffect"

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
